<resources>
    <string name="app_name">Basho</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="location_settings">Location</string>

    <string name="addCategoryLabel">Add Category</string>

    <string name="place_info">Place Info</string>
    <string name="place_name">Name</string>
    <string name="place_street">Street</string>
    <string name="place_city">City</string>
    <string name="place_state">State</string>
    <string name="place_zip_code">Zip Code</string>
    <string name="place_country">Country</string>

    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string name="content_desc">Location</string>

    <string-array name="countries">
        <item>US</item>
    </string-array>
</resources>
